Fix "Mark all as read button" overflowing on mobile

--- a/app/assets/stylesheets/thredded/base/_buttons.scss
+++ b/app/assets/stylesheets/thredded/base/_buttons.scss
@@ -52,7 +52,7 @@
 }
 
 .thredded--button-wide {
-  width: 100%;
+  display: block;
   text-align: center;
 }
 
